--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,8 @@
                   <a href = "contact.html">Contact</a> 
                 </div>
         </div>
-        <div class = "container"> 
-          <div class = "title">
+        <div class = "clearfix"> 
+          <div class = "contact">
             <h2>Contact</h2>
           </div>
            <hr>
