--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                   <a href = "Portfolio.html">Portfolio</a>
                   <a href = "contact.html">Contact</a> 
                 </div>
-                <div class = "container">
+                <div class = "clearfix">
                 <div>
                   <p class = "about-me">About Me</p>
                 </div>
