added media query

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,6 +25,7 @@
             </div>
           <hr>
           <br>
+          <div class = "clearfix">
           <div class="image-wrapper">
           <div class="imageHolder">
           <img src="https://source.unsplash.com/random/200x200" alt="" />
@@ -60,7 +61,7 @@
                       </div>
             </div>
     </div>
-          
+  </div>
           
     <div class = "clearfix"></div>
     <div class="footer">
