--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link href = "reset.css" type = "text/css" rel = "stylesheet">
         <link href = "style.css" rel = "stylesheet" type = "text/css">
+        <!-- Google font -->
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     </head>
     <body>
            
