--- a/portfolio.html
+++ b/portfolio.html
@@ -2,18 +2,20 @@
 <html lang = "en-us">
   <head>
     <meta charset = "UTF-8">
-    <title>
-      portfolio
-    </title>
+    <!-- Title -->
+    <title>portfolio</title>
     <meta name = "viewport" content = "width = device-widht, initial-scale=1, shrank-to-fit=no">
+    <!-- Link to style.css, reset.css and bootstrap files -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel = "stylesheet" type = "text/css" href = "style.css">
     <link rel = "stylesheet" type = "text/css" href = "reset.css">
   </head>
 <body>
-
+         <!-- Header -->
         <div class = "header">
           <h1>Mojib Mohammad</h1>
         </div>
+        <!-- Navbar -->
           <div class = "navbar">
             <a href = "index.html">About</a>
             <a href = "Portfolio.html">Portfolio</a>
@@ -25,10 +27,12 @@
             </div>
           <hr>
           <br>
+          <!-- Image wrapper -->
           <div class = "clearfix">
           <div class="image-wrapper">
           <div class="imageHolder">
           <img src="https://source.unsplash.com/random/200x200" alt="" />
+          <!-- Image caption -->
           <div class="caption"><br>Caption goes here</div>
           </div>
           <div class="imageHolder">
@@ -62,7 +66,7 @@
             </div>
     </div>
   </div>
-          
+          <!-- Footer -->
     <div class = "clearfix"></div>
     <div class="footer">
         © 2018 Copyright:
